# MyC

./: CMakeLists.txt  README.md  a.cpp  file.c  jichu.c  main.c  main.i  main.s  my.c
file/: a.txt  book.txt  date.txt  fell.txt  string1.txt
